--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@services/contracts": ["libs/contracts/src/index.ts"],
       "@services/interfaces": ["libs/interfaces/src/index.ts"]
     }
   },
