--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "services",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "all": "nx run-many --target=serve --all --parallel=10"
+  },
   "private": true,
   "dependencies": {
     "@nestjs/common": "^9.0.0",
