--- a/apps/course/tsconfig.app.json
+++ b/apps/course/tsconfig.app.json
@@ -8,5 +8,5 @@
     "target": "es2015"
   },
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "../../libs/database/src/lib/models/review.model.ts", "../../libs/database/src/lib/models/course.model.ts"]
 }
