--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/serve-static": "^3.0.1",
+    "app-root-path": "^3.1.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "date-fns": "^2.29.3",
+    "fs-extra": "^11.1.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.4",
     "nestjs-rmq": "^2.8.0",
@@ -24,6 +28,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
+    "sharp": "^0.31.3",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -37,10 +42,14 @@
     "@nrwl/nx-cloud": "latest",
     "@nrwl/webpack": "15.5.3",
     "@nrwl/workspace": "15.5.3",
+    "@types/app-root-path": "^1.2.4",
     "@types/bcryptjs": "^2.4.2",
+    "@types/fs-extra": "^11.0.1",
     "@types/jest": "28.1.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.7.1",
     "@types/passport-jwt": "^3.0.8",
+    "@types/sharp": "^0.31.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "eslint": "~8.15.0",
