--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "sharp": "^0.31.3",
+    "telegraf": "^4.11.2",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
