--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
     "paths": {
       "@services/contracts": ["libs/contracts/src/index.ts"],
       "@services/database": ["libs/database/src/index.ts"],
-      "@services/interfaces": ["libs/interfaces/src/index.ts"]
+      "@services/interfaces": ["libs/interfaces/src/index.ts"],
+      "@services/telegram": ["libs/telegram/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
